--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,3 @@
-# llama-index
-# llama-index-tools-mcp
-# mcp
-# ollama
-# fastmcp
-# llama-index-llms-ollama
-# llama-index-llms-google-genai
-# google-generativeai
-
 fastmcp==2.13.2
 llama-index==0.14.9
 llama-index-core==0.14.9
@@ -14,3 +5,7 @@ llama-index-llms-gemini==0.6.1
 llama-index-tools-mcp==0.4.3
 python-dotenv==1.2.1
 google-generativeai==0.8.5
+qdrant-client==1.12.1
+sentence-transformers==3.3.1
+requests==2.32.3
+google-search-results==2.4.2
